[gd_scene load_steps=5 format=3 uid="uid://bdijwedo7hlpj"]

[ext_resource type="Script" uid="uid://c071ht0ndfax5" path="res://QuizAlt/QuizScripts/controllers/game_controller.gd" id="1_cmoah"]
[ext_resource type="Resource" uid="uid://bfvyqiru7b13s" path="res://QuizAlt/Resources/Varied/theme_varied.tres" id="2_0koi2"]
[ext_resource type="AudioStream" uid="uid://di7ktxevla7lr" path="res://QuizAlt/correct.wav" id="3_tpds0"]
[ext_resource type="AudioStream" uid="uid://neuyoeixidbp" path="res://QuizAlt/incorrect.wav" id="4_88hwp"]

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_cmoah")
quiz = ExtResource("2_0koi2")
color_right = Color(0.488179, 1, 0.456277, 1)
color_wrong = Color(1, 0.287307, 0.225237, 1)

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionInfo" type="VBoxContainer" parent="Content"]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 404.0

[node name="QuestionText" type="Label" parent="Content/QuestionInfo"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "LA PREGUNTA"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ImageHolder" type="Panel" parent="Content/QuestionInfo"]
custom_minimum_size = Vector2(0, 320)
layout_mode = 2

[node name="QuestionImage" type="TextureRect" parent="Content/QuestionInfo/ImageHolder"]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 318.0
expand_mode = 1
stretch_mode = 5

[node name="QuestionHolder" type="VBoxContainer" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -293.0
offset_top = -233.0
offset_right = 294.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="ButtonOption1" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption2" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonOption3" type="Button" parent="Content/QuestionHolder"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tpds0")
volume_db = 3.748

[node name="AudioIncorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_88hwp")
